# Qt_Application

./: README.md  meson.build
src/: main.cpp  mainwindow.cpp  mainwindow.hpp  meson.build
src/resources/: styles.qss
